replace values by known variables, remove separator, add borders, fix bug of overflowing height

--- a/scss/components/multiselect-input.scss
+++ b/scss/components/multiselect-input.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
 
-  border: 1px solid $medium-grey;
+  border: $default-border;
   border-radius: $border-radius;
 
   width: $dropdown-button-min-width;
